<resources>
    <string name="app_name">OrgDo</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about_us">About Us</string>
    <string name="phone_number">Phone Number</string>
    <string name="fg_password_link">Send Set Password Link</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="remember_password">Remember Password</string>
    <string name="do_not_have_account_sign_up">Do not Have Account! Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up_create_account">Sign Up/Create Account</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="aadhar_card_number">Aadhar Card Number</string>
    <string name="create_account">Create Account</string>
    <string name="pin_code">Pin Code</string>
    <string name="already_have_account_login">Already have account! Login</string>
    <string name="menu_pledge">Pledge</string>
    <string name="menu_eye_donation">Eye Donation</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="rate_us">Rate Us</string>
    <string name="pledge">Pledge</string>
    <string name="personal_details">Personal Details :-</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="others">OTHERS</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="o">O</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AB</string>
    <string name="donation_you_wish_to_make_for">Donation you wish to make for :</string>
    <string name="any_part_of_body">Any part of body</string>
    <string name="or">OR</string>
    <string name="corneas">Corneas</string>
    <string name="kidneys">Kidneys</string>
    <string name="heart">Heart</string>
    <string name="lungs">Lungs</string>
    <string name="liver">Liver</string>
    <string name="pancreas">Pancreas</string>
    <string name="residential_and_contact_info">Residential and contact info</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="enter_your_city_with_pincode">Enter your City with pincode</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="hospitals">Hospitals</string>
    <string name="eye_donation">Eye Donation \n Hospitals</string>
    <string name="blood_donation">Blood Donation \n Hospitals</string>
    <string name="organ_donation">Organ Donation \n Hospitals</string>
    <string name="save_a_life">SAVE A LIFE</string>
    <string name="menu_blood_donation">Blood Donation</string>
    <string name="menu_organ_donation">Organ Donation</string>
    <string name="menu_hospitals">Hospitals</string>
    <string name="submit">Submit</string>
    <string name="instructions_and_rules">Please refer to the help section for instructions and rules!</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="more_options">More Options</string>
    <string name="let_us_save_a_life_be_a_donor">Let Us Save a Life, Be a Donor</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="be_a_donor">Be a Donor</string>
    <string name="city_and_pincode">City And Pincode</string>
    <string name="organ_donated">Organ Donated</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="organ_donation_hospital">Organ Donation Hospitals</string>
    <string name="eye_donation_hospital">Eye Donation Hospitals</string>
    <string name="blood_donation_hospitals">Blood Donation Hospitals</string>
    <string name="instructions">Instructions</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="donor_list">Donor List</string>
    <string name="upload_your_photo">Upload your Photo</string>
    <string name="upload_your_medical_certificate">Upload your Medical Certificate</string>
    <string name="medical_certificate"><a href="https://en.wikipedia.org/wiki/Organ_donation">Medical Certificate</a></string>
</resources>