<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.uniix.organdonation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.uniix.organdonation.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.uniix.organdonation.ui.about.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_pledge"
        android:name="com.uniix.organdonation.ui.pledge.PledgeFragment"
        android:label="@string/menu_pledge"
        tools:layout="@layout/fragment_pledge" />

    <fragment
        android:id="@+id/nav_eye"
        android:name="com.uniix.organdonation.ui.eye.EyeDonationFragment"
        android:label="@string/menu_eye_donation"
        tools:layout="@layout/fragment_eye_donation" />

    <fragment
        android:id="@+id/nav_blood"
        android:name="com.uniix.organdonation.ui.blood.BloodDonationFragment"
        android:label="@string/menu_blood_donation"
        tools:layout="@layout/fragment_blood_donation" />

    <fragment
        android:id="@+id/nav_organ"
        android:name="com.uniix.organdonation.ui.organ.FragmentOrgan"
        android:label="@string/menu_organ_donation"
        tools:layout="@layout/fragment_organ" />

    <fragment
        android:id="@+id/nav_hospitals"
        android:name="com.uniix.organdonation.ui.hospitals.FragmentHospitals"
        android:label="@string/menu_hospitals"
        tools:layout="@layout/fragment_hospitals" />

    <fragment
        android:id="@+id/nav_instructions"
        android:name="com.uniix.organdonation.ui.help.HelpInstructionFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_help_instruction" />

    <fragment
        android:id="@+id/nav_resetpassword"
        android:name="com.uniix.organdonation.ui.resetpassword.ResetPasswordFragment"
        android:label="Reset Password"
        tools:layout="@layout/fragment_reset_password" />

</navigation>